<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_view_home"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/home_screen"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/text_view_company_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_view_home"
        android:text="@string/text_company_field"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:id="@+id/text_view_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_view_company_field"
        android:gravity="center"
        android:text="@string/text_company_name"
        android:textSize="25sp"
        android:fontFamily="sans-serif-black"
        android:textColor="#444444"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_view_company_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_view_company_name"
        android:layout_marginTop="16dp"
        android:text="@string/text_company_services"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#666666"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_company_services"
        app:cardBackgroundColor="#E0F7FA"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_form_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/form_text_view"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#555555"/>

            <TextView
                android:id="@+id/text_view_form_home_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_text_view_2"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#555555"/>

            <EditText
                android:id="@+id/edit_text_email_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <EditText
                android:id="@+id/edit_text_phone_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:inputType="number"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/button_send_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00ACC1"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/button_home_send"
                android:textSize="22sp"/>




        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

