<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_crimea_title"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/crimea_4"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/text_view_crimea_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_crimea_title"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/crimea_title"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="#444444"/>


            <ImageView
                android:id="@+id/image_view_crimea_1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/crimea"
                android:scaleType="centerCrop"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/text_view_crimea_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_crimea_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="#B2EBF2"
                app:layout_constraintTop_toBottomOf="@id/text_view_crimea_title"
                app:layout_constraintStart_toEndOf="@id/image_view_crimea_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="8dp"
                android:elevation="4dp"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crimea_adv_1"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_crimea_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="#B2EBF2"
                app:layout_constraintTop_toBottomOf="@id/card_view_crimea_1"
                app:layout_constraintStart_toEndOf="@id/image_view_crimea_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="8dp"
                android:elevation="4dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crimea_adv_2"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"/>

            </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/image_view_crimea_2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/crimea_2"
            android:scaleType="centerCrop"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/card_view_crimea_2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_crimea_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#B2EBF2"
            app:layout_constraintTop_toBottomOf="@id/card_view_crimea_2"
            app:layout_constraintEnd_toStartOf="@id/image_view_crimea_2"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="8dp"
            android:elevation="4dp"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crimea_adv_3"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_crimea_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#B2EBF2"
            app:layout_constraintTop_toBottomOf="@id/card_view_crimea_3"
            app:layout_constraintEnd_toStartOf="@id/image_view_crimea_2"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="8dp"
            android:elevation="4dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crimea_adv_4"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/image_view_crimea_3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/crimea_3"
            android:scaleType="centerCrop"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/card_view_crimea_4"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_crimea_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#B2EBF2"
            app:layout_constraintTop_toBottomOf="@id/card_view_crimea_4"
            app:layout_constraintStart_toEndOf="@id/image_view_crimea_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="8dp"
            android:elevation="4dp"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crimea_adv_5"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_crimea_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#B2EBF2"
            app:layout_constraintTop_toBottomOf="@id/card_view_crimea_5"
            app:layout_constraintStart_toEndOf="@id/image_view_crimea_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="8dp"
            android:elevation="4dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crimea_adv_6"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_crimea_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#B2EBF2"
            app:layout_constraintTop_toBottomOf="@id/card_view_crimea_6"
            app:layout_constraintStart_toEndOf="@id/image_view_crimea_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="8dp"
            android:elevation="4dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crimea_adv_7"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>